[package]
authors = ["Blake Hildebrand <baugusthildebrand@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "usync"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.3"
alloc-cortex-m = "0.4.0"
heapless = "0.5.6"

[dependencies.conquer-once]
version = "0.2.1"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.0"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.7"
default-features = false
features = ["alloc"]

[dependencies.stm32f4xx-hal]
version = "0.8.3"
features = ["stm32f407"]

# this lets you use `cargo fix`!
[lib]
name = "usync"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
